--- a/css/index.css
+++ b/css/index.css
@@ -32,6 +32,10 @@
   box-sizing: border-box;
 }
 
+html {
+  scroll-behavior: smooth;
+}
+
 body {
   color: var(--white);
   background: var(--gradient);
