--- a/css/statement.css
+++ b/css/statement.css
@@ -24,6 +24,10 @@
   line-height: 26px;
 }
 
+.statement:last-child {
+  margin-block-end: 0;
+}
+
 @media screen and (min-width: 768px) {
   .statement {
     padding: 80px;
