--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,12 @@
 .header {
   position: sticky;
   inset-block-start: 0;
-  backdrop-filter: blur(10px);
   z-index: 10;
+}
+
+.header.is-blur {
+  backdrop-filter: blur(10px);
+  transition: .75s;
 }
 
 .header-content {
@@ -10,4 +14,19 @@
   justify-content: space-between;
   align-items: center;
   block-size: 80px;
+}
+
+.logo-nav {
+  display: flex;
+  align-items: center;
+  gap: 48px;
+}
+
+#header-button {
+  transition: .75s;
+}
+
+#header-button.is-unseen {
+  visibility: hidden;
+  opacity: 0;
 }
