--- a/css/header.css
+++ b/css/header.css
@@ -2,10 +2,11 @@
   position: sticky;
   inset-block-start: 0;
   z-index: 10;
+  backdrop-filter: blur(10px);
 }
 
 .header.is-blur {
-  backdrop-filter: blur(10px);
+  backdrop-filter: blur(0px);
   transition: .75s;
 }
 
@@ -28,5 +29,14 @@
 
 #header-button.is-unseen {
   visibility: hidden;
+  opacity: 0;
+}
+
+.point {
+  position: absolute;
+  inline-size: 10px;
+  block-size: 10px;
+  border: 1px solid red;
+  inset-block-start: 0;
   opacity: 0;
 }
