change color pallete

--- a/css/form.css
+++ b/css/form.css
@@ -46,7 +46,7 @@
 
 .form-input.is-required label::after {
   content: '*';
-  color: #DA1414;
+  color: #fd0404;
 }
 
 @media screen and (min-width: 768px) {
