--- a/css/hero.css
+++ b/css/hero.css
@@ -31,7 +31,7 @@
 
 .hero-image {
   position: relative;
-  background-color: #6F34FE;
+  background-color: rgb(41, 196,87);
   inline-size: 100%;
   max-inline-size: 330px;
   padding-inline: 40px;
